person-service/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 8f716d14af22d71b363917b40d03e855839e82a4
    app.quarkus.io/build-timestamp: 2023-04-20 - 09:42:34 +0000
  labels:
    app.kubernetes.io/name: person-service
    app.kubernetes.io/version: 1.6.0
  name: person-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8083
  selector:
    app.kubernetes.io/name: person-service
    app.kubernetes.io/version: 1.6.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 8f716d14af22d71b363917b40d03e855839e82a4
    app.quarkus.io/build-timestamp: 2023-04-20 - 09:42:34 +0000
  labels:
    app.kubernetes.io/name: person-service
    app.kubernetes.io/version: 1.6.0
  name: person-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: person-service
      app.kubernetes.io/version: 1.6.0
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 8f716d14af22d71b363917b40d03e855839e82a4
        app.quarkus.io/build-timestamp: 2023-04-20 - 09:42:34 +0000
      labels:
        app.kubernetes.io/name: person-service
        app.kubernetes.io/version: 1.6.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/nam_nt/person-service:latest
          imagePullPolicy: Always
          name: person-service
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
